--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mysql": "^2.14.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "redux": "^3.7.2",
     "request": "^2.83.0",
     "sequelize": "^4.11.1"
   },
