--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-dom": "^16.0.0",
     "redux": "^3.7.2",
     "request": "^2.83.0",
-    "sequelize": "^4.11.1"
+    "sequelize": "3.21.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
