--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Group travel app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --bail --reporter nyan spec/server-spec.js; pkill -n node;",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon --inspect server/index.js"
   },
@@ -36,6 +36,7 @@
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
     "mocha": "^3.5.3",
+    "node-mocks-http": "^1.6.5",
     "webpack": "^3.6.0"
   }
 }
