--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/laraismael1/Bare-Minimum#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "dotenv": "^4.0.0",
     "express": "^4.15.5",
     "jquery": "^3.2.1",
     "mysql": "^2.14.1",
