--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
-    "test": "mocha --bail --reporter nyan spec/server-spec.js; pkill -n node;",
+    "test-server": "mocha --bail --reporter nyan spec/server-spec.js;",
+    "test-database": "mocha --bail --reporter nyan spec/database-spec.js;",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon --inspect server/index.js"
   },
