Add redux reducers/actions and specs for testing client-side redux

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server/index.js",
     "test-server": "mocha --bail --reporter nyan spec/server-spec.js;",
     "test-database": "mocha --bail --reporter nyan spec/database-spec.js;",
+    "test-client": "mocha --bail --reporter nyan spec/client-spec.js;",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon --inspect server/index.js"
   },
