--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.5",
+    "express-session": "^1.15.6",
     "jquery": "^3.2.1",
     "mysql": "^2.14.1",
     "react": "^16.0.0",
