--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "npm": "^5.4.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-popup": "^0.8.0",
     "redux": "^3.7.2",
     "request": "^2.83.0",
     "sequelize": "^3.24.5"
