--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-popup": "^0.8.0",
+    "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "request": "^2.83.0",
     "sequelize": "^3.24.5"
