Add env files and change procfile

--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,6 @@ bower_components/
 # Environment Variables
 .env
 .env.development
-.env.staging
-.env.production
 
-*.bundle.js
-package-lock.json
+.env.production
+*.bundle.jspackage-lock.json
