setting up webpack post deploy

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test-database": "NODE_ENV=development mocha --bail --reporter nyan spec/database-spec.js;",
     "test-client": "NODE_ENV=development mocha --bail --reporter nyan spec/client-spec.js;",
     "react-dev": "NODE_ENV=development webpack -d --watch",
-    "server-dev": "NODE_ENV=development nodemon  --require dotenv/config --inspect server/index.js"
+    "server-dev": "NODE_ENV=development nodemon  --require dotenv/config --inspect server/index.js",
+    "postinstall": "webpack -p --config ./webpack.prod.config.js --progress"
   },
   "repository": {
     "type": "git",
