--- a/.env.staging
+++ b/.env.staging
@@ -3,4 +3,4 @@ DB_PASS=x3dbekvge8ywy86c
 DB_NAME=bgnux6mjctm482u2
 DB_PORT=3306
 DB_HOST=rtzsaka6vivj2zp1.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
-HOSTNAME=https://git.heroku.com/bm-travel-with-friends-staging.git/
+HOSTNAME=https://git.heroku.com/bm-travel-with-friends-staging.git
