edit for production deployment

--- a/.gitignore
+++ b/.gitignore
@@ -31,10 +31,9 @@ bower_components/
 # Environment Variables
 .env
 .env.development
-
-
 .env.production
+.env.staging
 
 *.bundle.js
-
+package-lock.json
 
