--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "test-database": "NODE_ENV=development mocha --bail --reporter nyan spec/database-spec.js;",
     "test-client": "NODE_ENV=development mocha --bail --reporter nyan spec/client-spec.js;",
     "react-dev": "NODE_ENV=development webpack -d --watch",
-
     "server-dev": "NODE_ENV=development nodemon  --require dotenv/config --inspect server/index.js",
     "clean": "rimraf ./client/dist/*.bundle.*",
     "build": "webpack -p --config ./webpack.config.js --progress",
     "postinstall": "npm run clean && npm run build"
-
   },
   "repository": {
     "type": "git",
@@ -34,6 +32,8 @@
     "express-session": "^1.15.6",
     "install": "^0.10.1",
     "jquery": "^3.2.1",
+    "mapbox-gl": "^0.40.1",
+    "mapbox-gl-geocoder": "^2.0.1",
     "mysql": "^2.14.1",
     "npm": "^5.4.2",
     "react": "^16.0.0",
