--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "mapbox-gl-geocoder": "^2.0.1",
     "mysql": "^2.14.1",
     "npm": "^5.4.2",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-popup": "^0.8.0",
