--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/laraismael1/Bare-Minimum#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "bootstrap": "^3.3.7",
     "connect-session-sequelize": "^4.1.0",
     "dotenv": "^4.0.0",
     "express": "^4.15.5",
@@ -39,6 +40,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react": "^16.0.0",
+    "react-bootstrap": "^0.31.3",
     "react-dom": "^16.0.0",
     "react-popup": "^0.8.0",
     "react-redux": "^5.0.6",
@@ -54,7 +56,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
     "mocha": "^3.5.3",
-    "node-mocks-http": "^1.6.5"
+    "node-mocks-http": "^1.6.5",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2"
   }
 }
