--- a/package.json
+++ b/package.json
@@ -58,6 +58,10 @@
     "mocha": "^3.5.3",
     "node-mocks-http": "^1.6.5",
     "style-loader": "^0.19.0",
-    "url-loader": "^0.6.2"
+    "url-loader": "^0.6.2",
+    "jsdomify": "^3.1.0",
+    "react-addons-test-utils": "^15.6.2",
+    "react-with-addons": "0.0.1"
+
   }
 }
