--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     "test-database": "NODE_ENV=development mocha --bail --reporter nyan spec/database-spec.js;",
     "test-client": "NODE_ENV=development mocha --bail --reporter nyan spec/client-spec.js;",
     "react-dev": "NODE_ENV=development webpack -d --watch",
-    "server-dev": "NODE_ENV=development nodemon  --require dotenv/config --inspect server/index.js",
-    "clean": "rimraf ./client/dist/*.bundle.*",
-    "build": "webpack -p --config ./webpack.config.js --progress",
-    "postinstall": "npm run clean && npm run build"
+    "server-dev": "NODE_ENV=development nodemon  --require dotenv/config --inspect server/index.js"
   },
   "repository": {
     "type": "git",
